# computer-networks

./: .gitignore  README.md
SimpleClientServer/: CMakeLists.txt
SimpleClientServer/client/: CMakeLists.txt  client.c
SimpleClientServer/server/: server.c
SimpleFTPonTCP/: CMakeLists.txt
SimpleFTPonTCP/client/: CMakeLists.txt  client.cpp  client.h  ftp-entity.h  ftp_client.cpp  ftp_client.h  ftp_entity.h
SimpleFTPonTCP/server/: CMakeLists.txt  ftp_server.cpp  ftp_server.h  server.cpp  server.h
SimpleFTPonTCP/utils/: CMakeLists.txt  readn.cpp  readn.h  request.h  response.cpp  response.h  socket_io.cpp  socket_io.h
SimpleFTPonUDP/: CMakeLists.txt
SimpleFTPonUDP/client/: CMakeLists.txt  client.cpp  client.h  ftp_client.cpp  ftp_client.h  ftp_entity.h
SimpleFTPonUDP/server/: CMakeLists.txt  ftp_server.cpp  ftp_server.h  server.cpp  server.h
SimpleFTPonUDP/utils/: CMakeLists.txt  package.cpp  package.h  package_type.cpp  package_type.h  readn.cpp  readn.h  request.h  response.cpp  response.h  socket_io.cpp  socket_io.h
SimpleTCP/: CMakeLists.txt
SimpleTCP/client/: CMakeLists.txt  client.cpp  client.h
SimpleTCP/server/: CMakeLists.txt  server.c  server.cpp  server.h
SimpleTCP/server_select/: CMakeLists.txt  server_select.cpp  server_select.h
SimpleUDP/: CMakeLists.txt
SimpleUDP/client/: CMakeLists.txt  client.cpp  client.h
SimpleUDP/server/: CMakeLists.txt  server.cpp  server.h
networks/: CMakeLists.txt
networks/ftp_protocol/: CMakeLists.txt  ftp_client.h  ftp_entity.h  ftp_peer.h  ftp_server.h  request.h  response.h
networks/ftp_tcp/: CMakeLists.txt
networks/ftp_tcp/client/: CMakeLists.txt  client.cpp  client.h  ftp_client.h  ftp_client_tcp.cpp  ftp_client_tcp.h  ftp_entity.h
networks/ftp_tcp/server/: CMakeLists.txt  ftp_server.cpp  ftp_server.h  ftp_server_tcp.cpp  ftp_server_tcp.h  server.cpp  server.h
networks/ftp_tcp/utils/: CMakeLists.txt  readn.h  request.cpp  request.h  socket_io.h
networks/ftp_udp/: CMakeLists.txt
networks/ftp_udp/client/: CMakeLists.txt  client.cpp  client.h  ftp_client.h  ftp_client_udp.cpp  ftp_client_udp.h
networks/ftp_udp/server/: CMakeLists.txt  ftp_server.h  ftp_server_udp.cpp  ftp_server_udp.h  server.cpp  server.h
networks/ftp_udp/utils/: CMakeLists.txt  package.h  package_type.h  peer.h  response.cpp  socket_io.cpp  socket_io.h
networks/ftp_utils/: CMakeLists.txt  response.cpp  response.h
networks/report/: report.tex  settings.tex  titlepage.tex
networks/report/logs/: tcpcli.txt  tcpser.txt  udpackcli.txt  udpacksrv.txt  udpdupcli.txt  udpdupsrv.txt  udpmiscli.txt  udpmissrv.txt  (+2 more)
networks/tcp/: CMakeLists.txt
networks/udp/: CMakeLists.txt
protocols/report/: report.tex  settings.tex  titlepage.tex
report/: report.tex  settings.tex
(+44 files in other folders)
